--- a/BlazorAllTheThings/BlazorAllTheThings.Client/BlazorAllTheThings.Client.csproj
+++ b/BlazorAllTheThings/BlazorAllTheThings.Client/BlazorAllTheThings.Client.csproj
@@ -12,4 +12,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\CounterCompany\CounterCompany.csproj" />
+	</ItemGroup>
+
 </Project>
