--- a/BlazorAllTheThings/BlazorAllTheThings.Shared/BlazorAllTheThings.Shared.csproj
+++ b/BlazorAllTheThings/BlazorAllTheThings.Shared/BlazorAllTheThings.Shared.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<RootNamespace>BlazorAllTheThings</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,6 +13,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\CounterCompany\CounterCompany.csproj" />
 	</ItemGroup>
 
 </Project>
