--- a/BlazorAllTheThings/BlazorAllTheThings/BlazorAllTheThings.csproj
+++ b/BlazorAllTheThings/BlazorAllTheThings/BlazorAllTheThings.csproj
@@ -7,9 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\BlazorAllTheThings.Client\BlazorAllTheThings.Client.csproj" />
-		<ProjectReference Include="..\CounterCompany\CounterCompany.csproj" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\BlazorAllTheThings.Client\BlazorAllTheThings.Client.csproj" />
+		<ProjectReference Include="..\BlazorAllTheThings.Shared\BlazorAllTheThings.Shared.csproj" />
+		<ProjectReference Include="..\CounterCompany\CounterCompany.csproj" />
 	</ItemGroup>
 
 </Project>
