--- a/BlazorAllTheThings/BlazorAllTheThings.Shared/BlazorAllTheThings.Shared.csproj
+++ b/BlazorAllTheThings/BlazorAllTheThings.Shared/BlazorAllTheThings.Shared.csproj
@@ -19,4 +19,8 @@
 		<ProjectReference Include="..\CounterCompany\CounterCompany.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Components\" />
+	</ItemGroup>
+
 </Project>
